# any_commit

./: .env.format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build.gradle.kts  flake.nix  package.json  pnpm-lock.yaml  pyproject.toml  report.md  settings.gradle.kts
comshop-core/: build.gradle.kts
comshop-core/src/main/kotlin/com/github/ityeri/comshop/: CommandBuilder.kt  CommandRegistrar.kt  ContextDSL.kt  LiteralCommandBuilder.kt
comshop-core/src/main/kotlin/com/github/ityeri/comshop/argument/: ArgumentChainNode.kt  ArgumentNode.kt  SingleArgumentNode.kt
comshop-core/src/main/kotlin/com/github/ityeri/comshop/dsl/: ArgumentChainDSL.kt  ArgumentListDSL.kt  CommandBuilder.kt  CommandDSL.kt  ContextDSL.kt  LiteralCommandBuilder.kt  (+1 more)
comshop-plugin/src/main/kotlin/: ComshopPlugin.kt  ExampleCommand.kt
example-plugin/: build.gradle.kts
example-plugin/src/main/kotlin/: ComshopPlugin.kt  TeamCommand.kt
example-plugin/src/main/resources/: plugin.yml
examples/: crawler_example.py  example_recursive_crawling_server.py  mirror_example.py  server_example.py
python/: extractor.py
server/node/: db.cjs  db.spec.js  server.cjs
src/: main.cu
src/krawen/: __init__.py  async_chunked_reader.py  async_file_store.py  crawler.py  endpoint_path.py  endpoint_store.py  http_response_data.py  krawen_crawler.py  krawen_mirror_server.py  mirror_server.py  server.py
src/krawen/utils/: __init__.py  file.py  parsing_utils.py  setup_logging.py
tests/: test_crawler_download.py  test_crawler_sub_url.py  test_default_store_impl.py  test_mirror_server.py
(+1 files in other folders)
