[project]
name = "krawen"
version = "v0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "Crawling and Mirroring"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "fastapi>=0.121.1",
    "playwright>=1.56.0",
    "uvicorn>=0.38.0",
    "yarl>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/ityeri/krawen"
Issues = "https://github.com/ityeri/krawen/issues"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
]
